# SWAGA-RAG

./: .env.example  .gitignore  LICENSE  README.md  REPRODUCE.md  bio.ps1  pyproject.toml
configs/: judge_prep.json
configs/ablations/: bioasq_stable_baseline.json  (+18 more)
docs/: windows_benchmarks.md
results/: README.md
scripts/: _common.py  _repo_paths.py  adapt_hybrid_predictions_for_eval.py  bootstrap_env.ps1  build_bioasq_bm25_index.py  build_bioasq_classic_rag_index.py  build_bioasq_eval_queries.py  build_bioasq_pmc_graph.py  build_bioasq_pmc_swaga_index.py  build_bioasq_retrieval_eval.py  build_bm25_index.py  build_classic_rag_index.py  build_judge_payloads.py  build_judge_prompts.py  build_judge_reports.py  build_pmc_structured_corpus.py  build_qasper_graph.py  build_qasper_swaga_index.py  build_qasper_validation_eval.py  build_stage3_summary.py  build_swaga_index.py  compare_runs_overlap.py  diagnose_qasper_eval.py  download_pmc_xml.py  evaluate_bioasq_retrieval.py  evaluate_retrieval_metrics.py  evaluate_windows_retrieval.py  judge_v2_aggregate.py  judge_v2_calib_agreement.py  judge_v2_calibration_metrics.py  judge_v2_calibration_parse.py  judge_v2_calibration_prepare.py  judge_v2_calibration_run.py  judge_v2_client.py  judge_v2_cost_estimate.py  judge_v2_diag_low_noise.py  judge_v2_diag_manual_per_pair.py  judge_v2_diag_manual_vs_agg.py  judge_v2_full_run.py  judge_v2_make_pairs.py  (+30 more)
tests/: test_bootstrap_and_metadata.py  test_preprocess_graph_data.py  test_retrieval_runner.py  test_run_param_experiments.py  test_run_queries_swaga.py  test_swaga_pipeline_core.py
(+88 files in other folders)
