[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "swaga-rag"
version = "0.1.0"
description = "SWAGA-RAG research codebase"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy==2.3.5",
  "pandas==2.3.0",

  "torch==2.9.1",
  "sentence-transformers==5.1.2",
  "transformers==4.57.3",
  "scikit-learn==1.7.2",
  "scipy==1.16.3",
  "networkx==3.6.1",
  "tqdm==4.67.1",
  "PyYAML==6.0.3",
  "requests==2.32.5",
  "huggingface-hub==0.36.0",
  "tokenizers==0.22.1",
  "safetensors==0.7.0",
  "pillow==12.0.0",
  "tiktoken==0.11.0",
  "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

